Fixing the spacing/formatting issues

--- a/interface.css
+++ b/interface.css
@@ -7,6 +7,7 @@ body{
 }
 table{
 	white-space:nowrap;
+	border-spacing: 0px;
 }
 .button_notgrey{
 background: rgb(150,150,150);
@@ -17,20 +18,19 @@ background: rgb(0,0,0);
 background: linear-gradient(60deg, rgba(0,0,0,0.8) 0%, rgba(212,212,212,0.8) 49%, rgba(201,201,201,0.8) 49%, rgba(0,0,0,0.8) 100%);
 }	
 .div-table{
-	margin-bottom: -1;
 	display: grid;
  	grid-template-columns: repeat(2, 1);
  	gap: 0px;
 }
 .div-table-col1{
 	display: grid;
-	min-width: 265;
+	min-width: 255;
 	grid-column: 1 / 2;
+	margin-right: 1px;
 }
 .div-table-col2{
 	grid-column: 2 / 2;
 	min-width: 70px;
-	margin-left: 3px;
 	display: grid;
  	grid-template-columns: repeat(1, 3);
  	gap: 0px;
@@ -38,11 +38,24 @@ background: linear-gradient(60deg, rgba(0,0,0,0.8) 0%, rgba(212,212,212,0.8) 49%
 .div-table-col3{
 	display: inline-block;
 	min-width: 70px;
-	margin-left: 3px;
 }
 .div-table-col4{
 	display: inline-block;
-	min-width: 190;
+	min-width: 150;
+}
+.div-table-col-bulls{
+	display: grid;
+	min-width: 220;
+	grid-column: 1 / 2;
+	margin-right: 1px;
+}
+.div-table-col-spec{	
+	display: inline-block;
+	min-width: 200;
+}
+.div-table-col-sectraining{	
+	display: inline-block;
+	min-width: 150;
 }
 button{
 	background: rgb(150,150,150);
@@ -50,8 +63,6 @@ button{
 	min-width: 100%;
 	padding: 5px;
 	border-radius: 4px;
-	margin-bottom:3;
-	margin-right:1;
 }
 button:hover {
     border-color: white;
@@ -115,7 +126,6 @@ button:hover .hide{
 	height: 29px;
 	padding: 3px;
 	border-radius: 4px;
-	margin-bottom: 1px;
 }
 #buy_mult3{
 	min-width: 30%;
@@ -124,8 +134,6 @@ button:hover .hide{
 	height: 28px;
 	padding: 3px;
 	border-radius: 4px;
-	margin-bottom: 2px;
-
 }
 #buy_mult_image{
 	height: 30px;
